# joyful-scheduling-takehome

./: .gitignore  README_ORIGINAL.md  README_SOLUTION.md  pyproject.toml  requirements.txt
data/: accounts.json  bot_types.json  ingestion_sources.json
docs/: PLAN.md  PLAN_2.md  SOLUTION.md
scheduler/: api.py  config.py  database.py  executor.py  main.py  models.py  scheduler.py
src/: .gitkeep
tests/: .gitkeep  conftest.py  test_api.py  test_config.py  test_executor.py  test_integration.py  test_scheduler.py
